Added all components

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,34 +1,14 @@
-@font-face {
-  font-family: Roboto Slab;
-  src: url("../../vendor/Fonts/roboto-400-regular.woff");
-  src: url("../../vendor/Fonts/roboto-400-regular.woff2");
+.main {
+  width: 100%;
+  margin: 0;
 }
 
-.main__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  left: 416px;
-}
-
-.title {
-  color: white;
-  margin-top: 80px;
-  padding: 0;
-  width: 550px;
-  font-family: Roboto Slab;
-  font-weight: 400;
-  font-size: 60px;
-  line-height: 64px;
-  letter-spacing: 0px;
-}
-
-.description {
-  color: white;
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: 0px;
+.main__background {
+  background-image: url(../../assets/Background.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 600px; /* или больше, чтобы покрывало контент */
+  box-sizing: border-box;
 }
