--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,16 +3,9 @@
 }
 
 .page__content {
-  background-image: url(../../assets/Background.svg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   min-height: 100vh;
   width: 100%;
   max-width: 1440px;
-
-  padding: 0 40px;
+  margin: 0 auto;
   box-sizing: border-box;
-  position: relative;
-  z-index: 0;
 }
