--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,11 +6,12 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 30px 0 28px;
+  padding: 30px 60px 28px;
 }
 
 .header__logo {
   background-color: transparent;
+  margin-top: 25px;
   border: none;
   color: white;
   font-family: Roboto Slab;
@@ -45,13 +46,8 @@
   cursor: pointer;
 }
 
-.nav__underline {
-  display: block;
-  position: relative;
-  width: 60px;
-  height: 2px;
-  background-color: white;
-  margin-top: 28px;
+.header__home:hover {
+  border-bottom: 2px solid white;
 }
 
 .header__login {
@@ -68,4 +64,8 @@
   font-size: 20px;
   line-height: 24px;
   cursor: pointer;
+}
+
+.header__login:hover {
+  background-color: #e8e8e8;
 }
