--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -10,7 +10,8 @@
 }
 
 .news__content {
-  margin: 80px 100px;
+  padding: 80px 100px;
+  margin: 0 auto;
 }
 
 .news__title {
@@ -20,29 +21,49 @@
   line-height: 46px;
 }
 
-.card {
-  list-style: none;
-  width: 400px;
-  background-color: white;
+.cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
-  padding: 20px;
+  padding: 40px 0;
+  list-style: none;
+  margin: 0;
+}
+
+.card {
+  width: 100%;
+  max-width: 400px;
+  background-color: white;
+  border-radius: 5%;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.card__image-wrapper {
+  position: relative;
 }
 
 .card__image {
   position: relative;
+  width: 100%;
+  border-top-left-radius: 5%;
+  border-top-right-radius: 5%;
 }
 
 .news__card-save-btn {
   position: absolute;
+  top: 24px;
+  right: 24px;
   border-radius: 50%;
   background-color: transparent;
   border: none;
   width: 40px;
   height: 40px;
-  left: 430px;
-  margin-top: 24px;
+  cursor: pointer;
+}
+
+.card__content {
+  padding: 20px;
 }
 
 .news__date {
@@ -69,6 +90,7 @@
 }
 
 .card__signature {
+  color: #b6bcbf;
   font-family: Roboto Slab;
   font-weight: 700;
   font-size: 16px;
@@ -80,10 +102,15 @@
 .button__show-more {
   width: 288px;
   height: 64px;
-  margin: 0 auto;
-  background-color: #e8e8e8;
+  display: block;
+  background-color: white;
   color: black;
   border-radius: 80px;
   border: none;
   margin: 50px auto 80px;
+  cursor: pointer;
+}
+
+.button__show-more:hover {
+  background-color: #e8e8e8;
 }
