--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,17 +6,17 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 30px 60px 28px;
+  padding: 30px 104px 28px;
 }
 
 .header__logo {
   background-color: transparent;
-  margin-top: 25px;
+  margin-top: 20px;
   border: none;
   color: white;
   font-family: Roboto Slab;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 25px;
   line-height: 24px;
   cursor: pointer;
 }
@@ -40,7 +40,7 @@
   color: white;
   padding: 8px 16px;
   font-family: Roboto Slab;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 20px;
   line-height: 24px;
   cursor: pointer;
@@ -60,12 +60,33 @@
   margin-left: 16px;
   color: white;
   font-family: Roboto Slab;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 20px;
   line-height: 24px;
   cursor: pointer;
 }
 
 .header__login:hover {
+  background-color: #e8e8e8;
+}
+
+.header__logo.dark {
+  color: #1a1b22;
+}
+
+.header__home.dark,
+.header__login.dark {
+  color: #1a1b22;
+}
+
+.header__login.dark {
+  border: 1px solid #1a1b22;
+}
+
+.header__home.dark:hover {
+  border-bottom: 2px solid #1a1b22;
+}
+
+.header__login.dark:hover {
   background-color: #e8e8e8;
 }
