--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -4,23 +4,6 @@
   src: url("../../vendor/Fonts/inter-400-regular.woff2");
 }
 
-.news {
-  background-color: #f5f6f7;
-  background-size: cover;
-}
-
-.news__content {
-  padding: 80px 100px;
-  margin: 0 auto;
-}
-
-.news__title {
-  font-family: Roboto Slab;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 46px;
-}
-
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -46,6 +29,7 @@
 .card__image {
   position: relative;
   width: 100%;
+  height: 272px;
   border-top-left-radius: 5%;
   border-top-right-radius: 5%;
 }
