--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,7 +19,15 @@
 
 .footer__links {
   display: flex;
+  gap: 20px;
   align-items: center;
+}
+
+.links__group-two {
+  display: flex;
+  align-items: self-start;
+  padding-right: 16px;
+  gap: 20px;
 }
 
 .footer__home {
@@ -27,15 +35,16 @@
   background-color: transparent;
   color: black;
   cursor: pointer;
-  padding-right: 50px;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
-.footer_tt {
+.footer__tt {
   border: none;
   background-color: transparent;
   color: black;
   cursor: pointer;
-  padding-right: 50px;
+  text-decoration: none;
 }
 
 .footer__git {
@@ -45,4 +54,28 @@
 .footer__fcbk {
   cursor: pointer;
   margin-right: 20px;
+}
+
+@media (max-width: 725px) {
+  .footer {
+    padding: 0 16px;
+    flex-direction: column-reverse;
+    width: 100%;
+    margin: 0;
+  }
+
+  .footer__links {
+    justify-content: space-between;
+  }
+  .links__group-one {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+  }
+
+  .links__group-two {
+    margin-right: 20px;
+    gap: 20px;
+  }
 }
