--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -162,3 +162,29 @@
 .modal__submit:hover {
   background: #2f71e5;
 }
+
+@media (max-width: 950px) {
+  .modal {
+    padding: 0 10px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 725px) {
+  .modal {
+    max-height: fit-content;
+    width: 100%;
+    padding: 0;
+    margin-top: 56px;
+  }
+
+  .modal__close {
+    bottom: 16px;
+    margin-left: 20px;
+  }
+
+  .modal__submit {
+    width: 270px;
+    height: 64px;
+  }
+}
