--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -32,3 +32,45 @@
   line-height: 24px;
   letter-spacing: 0px;
 }
+
+@media (max-width: 950px) {
+  .navigation__content {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: static;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 36px;
+    line-height: 40px;
+    width: 100%;
+    width: 385px;
+    margin: 40px auto 40px;
+    padding: 0;
+  }
+
+  .description {
+    font-size: 18px;
+    line-height: 24px;
+    width: 100%;
+    width: 385px;
+    padding: 0 8px;
+  }
+}
+
+@media (max-width: 725px) {
+  .title {
+    width: 260px;
+    font-size: 36px;
+  }
+
+  .description {
+    width: 260px;
+    font-size: 18px;
+  }
+}
