--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -16,6 +16,7 @@
 .card {
   width: 100%;
   max-width: 400px;
+  height: 100%;
   background-color: white;
   border-radius: 5%;
   box-sizing: border-box;
@@ -24,26 +25,61 @@
 
 .card__image-wrapper {
   position: relative;
+  overflow: hidden;
 }
 
 .card__image {
-  position: relative;
+  width: 400px;
   width: 100%;
   height: 272px;
   border-top-left-radius: 5%;
   border-top-right-radius: 5%;
+  overflow: hidden;
+}
+
+.news-card__save-container {
+  position: absolute;
+  display: flex;
 }
 
 .news__card-save-btn {
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 16px;
+  right: 16px;
   border-radius: 50%;
   background-color: transparent;
   border: none;
   width: 40px;
   height: 40px;
   cursor: pointer;
+  z-index: 2;
+}
+
+.news-card__tooltip {
+  position: absolute;
+  top: 30px;
+  right: 60px;
+  background-color: white;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 12px;
+  white-space: nowrap;
+  z-index: 10;
+  font-family: Roboto;
+  font-weight: 500;
+  line-height: 100%;
+  text-align: center;
+}
+
+.card__keyword {
+  background-color: white;
+  bottom: 270px;
+  left: 10px;
+  width: 90px;
+  padding: 10px 20px;
+  position: relative;
+  border-radius: 10px;
 }
 
 .card__content {
@@ -81,4 +117,23 @@
   line-height: 20px;
   letter-spacing: 0.4px;
   text-transform: uppercase;
+}
+
+@media (max-width: 950px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
+    gap: 8px;
+  }
+}
+
+@media (max-width: 450px) {
+  .cards {
+    box-sizing: border-box;
+    margin: 0;
+  }
+
+  .card {
+    width: 288px;
+  }
 }
