--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -4,10 +4,14 @@
   align-items: center;
   background-color: white;
   margin-top: 40px;
-  width: fit-content;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+  width: 608px;
+  background-color: white;
   border-radius: 60px;
-  overflow: hidden;
+}
+
+.search__bar-container {
+  width: 100%;
+  position: relative;
 }
 
 .search__input {
@@ -33,6 +37,8 @@
   border-radius: 60px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  position: relative;
+  left: 86px;
 }
 
 .search__btn:hover {
@@ -54,4 +60,31 @@
   font-weight: 400;
   font-size: 40px;
   line-height: 46px;
+}
+
+@media (max-width: 950px) {
+  .search__btn {
+    left: 80px;
+    width: 160px;
+  }
+}
+
+@media (max-width: 725px) {
+  .search__bar {
+    width: 288px;
+    height: 56px;
+    display: block;
+  }
+
+  .search__btn {
+    width: 288px;
+    height: 56px;
+    top: 20px;
+    left: 0;
+  }
+
+  .search__input {
+    width: 250px;
+    background-color: transparent;
+  }
 }
