--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: Roboto;
   src: url("../../vendor/Fonts/roboto-slab-400-regular.woff");
-  src: url("../../vendor/Fonts/inter-400-regular.woff2");
+  src: url("../../vendor/Fonts/roboto-500.woff");
 }
 
 .cards {
@@ -14,6 +14,8 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 400px;
   height: 100%;
@@ -26,6 +28,7 @@
 .card__image-wrapper {
   position: relative;
   overflow: hidden;
+  height: 200px;
 }
 
 .card__image {
@@ -35,6 +38,7 @@
   border-top-left-radius: 5%;
   border-top-right-radius: 5%;
   overflow: hidden;
+  object-fit: cover;
 }
 
 .news-card__save-container {
@@ -66,7 +70,7 @@
   font-size: 12px;
   white-space: nowrap;
   z-index: 10;
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 500;
   line-height: 100%;
   text-align: center;
@@ -83,12 +87,15 @@
 }
 
 .card__content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   padding: 20px;
 }
 
 .news__date {
   color: #b6bcbf;
-  font-family: Source Sans Pro;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
@@ -96,27 +103,33 @@
 }
 
 .card__title {
-  font-family: Roboto Slab;
+  font-family: "Roboto Slab", "Georgia", "Times New Roman", serif;
   font-weight: 400;
   font-size: 26px;
   line-height: 30px;
 }
 
 .card__description {
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .card__signature {
   color: #b6bcbf;
-  font-family: Roboto Slab;
+  font-family: "Roboto Slab", "Georgia", "Times New Roman", serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.4px;
   text-transform: uppercase;
+  margin-top: auto;
 }
 
 @media (max-width: 950px) {
@@ -135,5 +148,6 @@
 
   .card {
     width: 288px;
+    margin: 0 auto;
   }
 }
