--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,22 +11,24 @@
 
 .footer__content {
   color: #b6bcbf;
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
 }
 
-.footer__links {
+.footer__nav {
+  display: flex;
+}
+
+.footer__nav-list {
   display: flex;
   gap: 20px;
   align-items: center;
+  list-style: none;
 }
 
-.links__group-two {
-  display: flex;
-  align-items: self-start;
-  padding-right: 16px;
+.footer__links-group-home {
   gap: 20px;
 }
 
@@ -47,6 +49,13 @@
   text-decoration: none;
 }
 
+.footer__social-list {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  list-style: none;
+}
+
 .footer__git {
   cursor: pointer;
 }
@@ -58,24 +67,32 @@
 
 @media (max-width: 725px) {
   .footer {
-    padding: 0 16px;
+    padding: 0 40px;
     flex-direction: column-reverse;
     width: 100%;
+    width: 100vw;
+    box-sizing: border-box;
     margin: 0;
   }
 
-  .footer__links {
+  .footer__nav {
     justify-content: space-between;
   }
-  .links__group-one {
+  .footer__nav-list {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 20px;
+    padding: 0;
   }
 
-  .links__group-two {
-    margin-right: 20px;
-    gap: 20px;
+  .footer__social-list {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+  }
+
+  .footer__fcbk {
+    margin: 0;
   }
 }
