--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,13 +6,13 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 30px 104px 15px;
+  padding: 0 100px;
   border-bottom: 1px solid #ccc;
 }
 
 .header__logo {
   background-color: transparent;
-  margin-top: 20px;
+  margin-top: 35px;
   border: none;
   color: white;
   font-family: "Roboto Slab", "Georgia", "Times New Roman", serif;
@@ -23,10 +23,11 @@
   text-decoration: none;
 }
 
-.header__buttons {
+.header__nav-list {
   gap: 24px;
   display: flex;
   align-items: center;
+  list-style: none;
 }
 
 .home {
@@ -153,7 +154,7 @@
   filter: invert(1);
 }
 
-.hamburger {
+.header__hamburger {
   display: none;
   background: none;
   border: none;
@@ -162,24 +163,35 @@
   cursor: pointer;
 }
 
-.hamburger__line {
+.header__hamburger-line {
   width: 24px;
   height: 2px;
   background-color: white;
 }
 
-.hamburger__line_dark {
+.header__hamburger-line_dark {
   background-color: black;
 }
 
-.mobile-menu {
+.header__mobile-menu {
+  position: fixed;
+  top: 56px;
+  left: 0;
+  height: 230px;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
+  background-color: #1a1b22;
   display: flex;
   flex-direction: column;
-  background-color: #1a1b22;
-  padding: 16px;
+  align-items: flex-start;
+  padding: 24px 24px 40px;
+  z-index: 1000;
+  border-radius: 0 0 16px 16px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-.mobile-menu.hidden {
+.header__mobile-menu.hidden {
   display: none;
 }
 
@@ -197,12 +209,15 @@
     font-size: 20px;
     margin-top: 0;
   }
+}
 
-  .header__buttons {
+@media (max-width: 550px) {
+  .header__nav-list {
     display: none;
   }
 
-  .hamburger {
+  .header__hamburger {
+    position: relative;
     display: flex;
   }
 }
