--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -23,7 +23,7 @@
 
 .modal__title {
   margin: 0;
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 900;
   line-height: 20px;
@@ -56,7 +56,7 @@
 }
 
 .modal__label {
-  font-family: Inter;
+  font-family: Inter, serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 100%;
@@ -74,7 +74,7 @@
 .modal__label {
   height: 52px;
   margin-top: 20px;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
@@ -100,7 +100,7 @@
 
 .modal__legend {
   margin: 0;
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
@@ -108,7 +108,7 @@
 
 .modal__input_type_radio {
   border: none;
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
@@ -135,7 +135,7 @@
   width: 358px;
   height: 36px;
   margin-top: 20px;
-  font-family: Roboto;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
@@ -149,7 +149,7 @@
 .modal__btn {
   border: none;
   background-color: transparent;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
