--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -28,7 +28,7 @@
 }
 
 .preloader__title {
-  font-family: "Roboto";
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
