--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -56,7 +56,7 @@
 }
 
 .news__title {
-  font-family: Roboto Slab;
+  font-family: "Roboto Slab", "Georgia", "Times New Roman", serif;
   font-weight: 400;
   font-size: 40px;
   line-height: 46px;
