--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,15 +4,32 @@
 }
 
 .header {
+  padding: 0;
+  background-image: url(../../assets/Backgroundp.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 600px;
+  box-sizing: border-box;
+}
+
+.header_dark {
+  background: none;
+  height: 100px;
+  min-height: 0;
+}
+
+.header__content {
   display: flex;
   justify-content: space-between;
-  padding: 0 100px;
   border-bottom: 1px solid #ccc;
+  padding: 0 100px;
 }
 
 .header__logo {
   background-color: transparent;
-  margin-top: 35px;
+  margin: 27px 0;
   border: none;
   color: white;
   font-family: "Roboto Slab", "Georgia", "Times New Roman", serif;
@@ -54,7 +71,7 @@
 .header__home::after {
   content: "";
   position: absolute;
-  bottom: -25px;
+  bottom: -27px;
   left: 0;
   width: 100%;
   height: 2px;
@@ -99,15 +116,16 @@
 }
 
 .header__username {
-  padding-left: 12px;
+  padding: 12px;
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  margin: 0;
 }
 
 .header__logout-img {
-  padding: 12px 12px;
+  padding: 12px;
   cursor: pointer;
 }
 
@@ -127,7 +145,7 @@
 .header__home_dark::after {
   content: "";
   position: absolute;
-  bottom: -25px;
+  bottom: -27px;
   left: 0;
   width: 100%;
   height: 2px;
@@ -173,22 +191,43 @@
   background-color: black;
 }
 
-.header__mobile-menu {
+.header__overlay {
   position: fixed;
-  top: 56px;
-  left: 0;
-  height: 230px;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* 50% black opacity */
+  z-index: 999;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header__mobile-menu {
   width: 100%;
   max-width: 100vw;
-  box-sizing: border-box;
   background-color: #1a1b22;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 24px 24px 40px;
   z-index: 1000;
-  border-radius: 0 0 16px 16px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  height: 230px;
+  overflow-y: auto;
+  border-radius: 0;
+}
+
+.header__mobile-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.header__close-button {
+  font-size: 24px;
+  color: white;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 .header__mobile-menu.hidden {
@@ -198,6 +237,9 @@
 @media (max-width: 950px) {
   .header {
     padding: 16px;
+  }
+
+  .header__content {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -211,7 +253,11 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 750px) {
+  .header__content {
+    padding: 20px;
+  }
+
   .header__nav-list {
     display: none;
   }
@@ -219,5 +265,16 @@
   .header__hamburger {
     position: relative;
     display: flex;
+  }
+
+  .header__mobile-menu {
+    visibility: visible;
+  }
+
+  .header__login {
+    width: 288px;
+    height: 56px;
+    width: 100%;
+    margin: 20px 0;
   }
 }
