--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,8 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
   align-items: center;
+  width: 100%;
 }
 
 .title {
@@ -35,7 +35,7 @@
 
 @media (max-width: 950px) {
   .navigation__content {
-    padding: 0;
+    padding: 40px;
     width: 100%;
     height: 100%;
     position: static;
@@ -50,7 +50,7 @@
     line-height: 40px;
     width: 100%;
     width: 385px;
-    margin: 40px auto 40px;
+    margin: 20px auto 20px;
     padding: 0;
   }
 
@@ -64,16 +64,21 @@
 }
 
 @media (max-width: 725px) {
+  .navigation__content {
+    padding: 0 0 40px;
+  }
+
   .title {
     width: 285px;
     font-size: 36px;
     text-align: left;
+    margin-top: 0;
   }
 
   .description {
     width: 285px;
     font-size: 18px;
     text-align: left;
-    margin-bottom: 50px;
+    margin: 0 0 80px;
   }
 }
