--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,90 +1,95 @@
-.search__bar {
+@font-face {
+  font-family: Roboto;
+  src: url("../../vendor/Fonts/roboto-400-regular.woff2");
+}
+
+.search-bar {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  margin-top: 40px;
-  width: 608px;
-  background-color: white;
-  border-radius: 60px;
-}
-
-.search__bar-container {
+  flex-direction: column;
+  max-width: 608px;
   width: 100%;
-  position: relative;
+  height: 64px;
+  background-color: #fff;
+  border-radius: 64px;
+  gap: 40px;
+  margin-bottom: 80px;
 }
 
-.search__input {
-  padding: 20px 24px;
+.search-bar__container {
+  position: relative;
+  display: flex;
+}
+
+.search-bar__input {
+  max-width: 376px;
+  width: 100%;
+  margin: 0;
+  padding: 22px 0 0 24px;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   border: none;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: transparent;
+}
+
+.search-bar__input:focus {
   outline: none;
-  font-size: 16px;
-  border-radius: 60px 0 0 60px;
-  width: 350px;
+  caret-color: #2f71e5;
 }
 
-.search__input::placeholder {
-  color: #a0a0a0;
-}
-
-.search__btn {
-  padding: 20px 40px;
-  background: #2f71e5;
-  color: white;
-  font-size: 16px;
+.search-bar__btn {
+  position: absolute;
+  right: 0;
+  background-color: #2f71e5;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 500;
+  color: #fff;
+  height: 64px;
+  width: 168px;
+  border-radius: 64px;
   border: none;
-  border-radius: 60px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  position: relative;
-  left: 86px;
+  font-size: 18px;
+  line-height: 24px;
 }
 
-.search__btn:hover {
-  background: #347eff;
+.search-bar__btn:hover {
+  cursor: url("../../assets/custom-cursor.svg"), pointer;
+  background-color: #1a5ed3cc;
 }
 
-.news {
-  background-color: #f5f6f7;
-  background-size: cover;
+.search-bar__btn:active {
+  background-color: #2a65cc;
 }
 
-.news__content {
-  padding: 80px 100px;
-  margin: 0 auto;
-}
+@media screen and (max-width: 768px) {
+  .search-bar {
+    width: 452px;
+    height: 56px;
+  }
 
-.news__title {
-  font-family: "Roboto Slab", "Georgia", "Times New Roman", serif;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 46px;
-}
-
-@media (max-width: 950px) {
-  .search__btn {
-    left: 80px;
+  .search-bar__input {
+    padding: 17px 0 0 24px;
+  }
+  .search-bar__btn {
     width: 160px;
+    height: 56px;
   }
 }
 
-@media (max-width: 725px) {
-  .search__bar {
+@media screen and (max-width: 575px) {
+  .search-bar {
     width: 288px;
-    height: 56px;
-    display: block;
   }
 
-  .search__btn {
-    width: 288px;
+  .search-bar__container {
+    flex-direction: column;
+    align-items: center;
     height: 56px;
-    top: 20px;
-    left: 0;
   }
 
-  .search__input {
-    width: 250px;
-    background-color: transparent;
+  .search-bar__btn {
+    width: 288px;
+    height: 56px;
+    top: 72px;
   }
 }
