--- a/src/components/SuccessPopup/SuccessPopup.css
+++ b/src/components/SuccessPopup/SuccessPopup.css
@@ -30,9 +30,9 @@
 .modal__close {
   position: relative;
   top: -80px;
-  left: 350px;
-  width: 20px;
-  height: 20px;
+  left: 400px;
+  width: 40px;
+  height: 40px;
   border: none;
   color: white;
   padding: 0;
@@ -60,4 +60,10 @@
   font-weight: 400;
   line-height: 100%;
   cursor: pointer;
+}
+
+@media (max-width: 450px) {
+  .popup-overlay {
+    padding: 16px;
+  }
 }
