--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -93,7 +93,7 @@
   padding: 20px;
 }
 
-.news__date {
+.card__news-date {
   color: #b6bcbf;
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
