--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: Roboto;
-  src: url("../../vendor/Fonts/roboto-400-regular.woff2");
-}
-
 .main {
   width: 100%;
   margin: 0;
@@ -106,7 +101,7 @@
 
 @media (max-width: 950px) {
   .news__content {
-    padding: 40px;
+    padding: 16px;
   }
 }
 
@@ -121,8 +116,20 @@
     margin: 0;
   }
 
+  .news__title {
+    font-size: 30px;
+  }
+
   .button__show-more {
     width: 288px;
     margin-bottom: 30px;
+  }
+
+  .main__not-found {
+    padding: 16px;
+  }
+
+  .main__not-found-box {
+    margin: 0 auto;
   }
 }
