--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -16,6 +16,7 @@
   align-items: center;
   visibility: hidden;
   z-index: 1000;
+  padding: 0 16px;
 }
 
 .modal_opened {
@@ -33,8 +34,8 @@
 
 .modal__close {
   position: absolute;
-  top: -80px;
-  left: 400px;
+  top: -50px;
+  left: 430px;
   width: 40px;
   height: 40px;
   border: none;
@@ -52,10 +53,9 @@
   background-color: #fff;
   padding: 28px 28px 36px;
   max-width: 430px;
-  box-sizing: border-box;
   width: 100%;
+  box-sizing: border-box;
   border-radius: 20px;
-  object-fit: cover;
 }
 
 .modal__label {
@@ -178,12 +178,15 @@
     max-height: fit-content;
     width: 100%;
     padding: 0;
-    margin-top: 56px;
+    margin-top: 60px;
   }
 
   .modal__close {
-    bottom: 16px;
-    margin-left: 20px;
+    position: relative;
+    top: -80px;
+    left: 350px;
+    width: 24px;
+    height: 24px;
   }
 
   .modal__submit {
