--- a/src/components/SuccessPopup/SuccessPopup.css
+++ b/src/components/SuccessPopup/SuccessPopup.css
@@ -27,10 +27,10 @@
   align-items: flex-start;
 }
 
-.modal__close {
+.popup__close {
   position: relative;
-  top: -80px;
-  left: 400px;
+  top: -70px;
+  left: 370px;
   width: 40px;
   height: 40px;
   border: none;
