--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: Roboto, Inter;
-  src: url("../../vendor/Fonts/roboto-500.woff2");
-  src: url("../../vendor/Fonts/inter-400-regular.woff");
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -16,7 +10,7 @@
   align-items: center;
   visibility: hidden;
   z-index: 1000;
-  padding: 0 16px;
+  width: 100vw;
 }
 
 .modal_opened {
@@ -33,19 +27,17 @@
 }
 
 .modal__close {
-  position: absolute;
-  top: -50px;
-  left: 430px;
-  width: 40px;
-  height: 40px;
-  border: none;
-  color: white;
-  padding: 0;
-  cursor: pointer;
   background-color: transparent;
   background-image: url(../../assets/close.svg);
   background-size: cover;
   background-repeat: no-repeat;
+  border: none;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
 }
 
 .modal__content {
@@ -59,7 +51,7 @@
 }
 
 .modal__label {
-  font-family: Inter, serif;
+  font-family: "Inter", serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 100%;
@@ -77,7 +69,7 @@
 .modal__label {
   height: 52px;
   margin-top: 20px;
-  font-family: Inter, serif;
+  font-family: "Inter", serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
@@ -166,27 +158,18 @@
   background: #2f71e5;
 }
 
-@media (max-width: 950px) {
-  .modal {
-    padding: 0 10px;
-    width: 100%;
-  }
-}
-
 @media (max-width: 725px) {
   .modal {
     max-height: fit-content;
-    width: 100%;
     padding: 0;
-    margin-top: 60px;
+    margin-top: 80px;
   }
 
   .modal__close {
-    position: relative;
-    top: -80px;
-    left: 350px;
-    width: 24px;
+    top: -45px;
+    right: 16px;
     height: 24px;
+    width: 24px;
   }
 
   .modal__submit {
