--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,4 @@
-.about__author {
+.about {
   background-color: white;
   z-index: 1;
   margin-top: 0;
@@ -39,7 +39,7 @@
 }
 
 @media (max-width: 950px) {
-  .about__author {
+  .about {
     padding: 50px 16px;
     gap: 30px;
   }
@@ -59,7 +59,7 @@
 }
 
 @media (max-width: 550px) {
-  .about__author {
+  .about {
     flex-direction: column;
     align-items: center;
     gap: 0;
