--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -60,7 +60,7 @@
   text-decoration: none;
 }
 
-.header__link::after {
+.header__link_active::after {
   content: "";
   position: absolute;
   bottom: -25px;
@@ -68,21 +68,14 @@
   width: 100%;
   height: 2px;
   background-color: white;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-  transform-origin: left;
 }
 
-.header__link:hover::after {
-  transform: scaleX(1);
+.header__link_theme_dark.header__link_active::after {
+  background-color: #1a1b22;
 }
 
 .header__link_theme_dark {
   color: #1a1b22;
-}
-
-.header__link_theme_dark::after {
-  background-color: #1a1b22;
 }
 
 .header__link_theme_dark:hover::after {
