--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -62,7 +62,7 @@
   color: #1a1b22;
 }
 
-.news__button_show-more {
+.news__button {
   width: 288px;
   height: 64px;
   display: block;
@@ -78,7 +78,7 @@
   line-height: 24px;
 }
 
-.news__button_show-more:hover {
+.news__button:hover {
   background-color: #e8e8e8;
 }
 
@@ -120,7 +120,7 @@
     font-size: 30px;
   }
 
-  .news__button_show-more {
+  .news__button {
     width: 288px;
     margin-bottom: 30px;
   }
@@ -131,6 +131,6 @@
 
   .main__not-found-box {
     margin: 0 auto;
-    width: 100;
+    width: 100%;
   }
 }
