--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -81,41 +81,10 @@
   border: none;
   margin-top: 10px;
   border-bottom: 1px solid #000;
-  font-family: Inter;
+  font-family: "Inter", serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
-}
-
-.modal__radio-buttons {
-  border: none;
-  padding: 0;
-  margin: 20px 0 20px;
-}
-
-.modal__legend {
-  margin: 0;
-  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 20px;
-}
-
-.modal__input_type_radio {
-  border: none;
-  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 20px;
-}
-
-.modal__radio-input {
-  margin-right: 10px;
-  cursor: pointer;
-}
-
-.modal__radio-input:checked {
-  accent-color: #000;
 }
 
 .modal__buttons {
@@ -144,7 +113,7 @@
 .modal__btn {
   border: none;
   background-color: transparent;
-  font-family: Inter, serif;
+  font-family: "Inter", serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
