--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -23,6 +23,7 @@
   border-radius: 5%;
   box-sizing: border-box;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .card__image-wrapper {
@@ -61,18 +62,17 @@
 
 .news-card__tooltip {
   position: absolute;
-  top: 30px;
+  top: 20px;
   right: 60px;
   background-color: white;
   color: black;
-  padding: 5px 10px;
+  padding: 13px;
   border-radius: 4px;
   font-size: 12px;
   white-space: nowrap;
   z-index: 10;
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 500;
-  line-height: 100%;
   text-align: center;
 }
 
