--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,7 +4,7 @@
   src: url("../../vendor/Fonts/roboto-400-regular.woff2");
 }
 
-.navigation__content {
+.navigation {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,7 +12,7 @@
   width: 100%;
 }
 
-.title {
+.navigation__title {
   color: white;
   margin-top: 80px;
   padding: 0;
@@ -24,7 +24,7 @@
   letter-spacing: 0px;
 }
 
-.description {
+.navigation__description {
   color: white;
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
@@ -34,7 +34,7 @@
 }
 
 @media (max-width: 950px) {
-  .navigation__content {
+  .navigation {
     width: 100%;
     height: 100%;
     position: static;
@@ -44,7 +44,7 @@
     text-align: center;
   }
 
-  .title {
+  .navigation__title {
     font-size: 36px;
     line-height: 40px;
     width: 100%;
@@ -53,7 +53,7 @@
     padding: 0;
   }
 
-  .description {
+  .navigation__description {
     font-size: 18px;
     line-height: 24px;
     width: 100%;
@@ -63,18 +63,18 @@
 }
 
 @media (max-width: 725px) {
-  .navigation__content {
+  .navigation {
     padding: 0 0 40px;
   }
 
-  .title {
+  .navigation__title {
     width: 285px;
     font-size: 36px;
     text-align: left;
     margin-top: 0;
   }
 
-  .description {
+  .navigation__description {
     width: 285px;
     font-size: 18px;
     text-align: left;
